syntax = "proto3";
package order;

option go_package = "/grpc/order";

message OrderInfo {
  string username = 1;
  int64 productID = 2;
  int64 userID = 3;
}

message OrderResult {
  string isOrderSuccess = 1;
}

message UserInfo {
  int64 userID = 1;
}

message UserCloudData {
  int64 timeStamp = 1;
}

service  OrderService {
  rpc MakeOrder(OrderInfo) returns (OrderResult) {}
  rpc GetUserCloudData(UserInfo) returns (UserCloudData) {}
}